Initial newform-admin version. Autoreload of the scheduler page.

--- a/ djangotaskscheduler/scheduler/html/scheduler/scheduler.html
+++ b/ djangotaskscheduler/scheduler/html/scheduler/scheduler.html
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block content %}
+<META HTTP-EQUIV="refresh" content="150">
 <div id="content-main">
 
 <form method="POST" action=".">
